--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,8 @@
 name: Main workflow
 on: push
+env: # Set the secret as an input
+  docker_username: nannaluie 
+  docker_password: ${{ secrets.GITHUB_TOKEN }}
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -33,3 +36,14 @@ jobs:
           # To report GitHub Actions status checks
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DISABLE_ERRORS: true
+  Docker-image:
+    runs-on: ubuntu-latest
+    needs: [Build]
+    permissions:
+      packages: write
+    steps:
+      - name: Download code
+        uses: actions/download-artifact@v4
+        with:
+          name: code
+          path: .
