--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ on: push
 env: # Set the secret as an input
   docker_username: nannaluie 
   docker_password: ${{ secrets.GITHUB_TOKEN }}
+  GIT_COMMIT: ${{ git.workflow_sha }}
 jobs:
   Build:
     runs-on: ubuntu-latest
@@ -47,3 +48,7 @@ jobs:
         with:
           name: code
           path: .
+      - name: build docker
+        run: bash ci/build-docker.sh
+      - name: push docker
+        run: bash ci/push-docker.sh
